[package]
name = "redis-module-macros-internals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors = ["Meir Shpilraien <meir@redis.com>"]
description = "Internal macros for redismodule-rs"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
lazy_static = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
