[package]
name = "redis-module-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors = ["Meir Shpilraien <meir@redis.com>"]
description = "Proc macros for redismodule-rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_syn = "0.1.0"
common = { path = "../common" }

[lib]
proc-macro = true
